se mejora el codigo

--- a/estilo.css
+++ b/estilo.css
@@ -7,8 +7,6 @@ body {
     width: 100%;
     height: 800px;
     margin: auto;
-    overflow: hidden;
-    position: relative;
 }
 
 h1 {
@@ -24,8 +22,8 @@ h1 {
     align-items: center;
     background: rgb(211, 211, 208);
     width: 100%;
-    animation: cambio 4s infinite alternate;
-    position: absolute;
+    height: 600px;
+    margin: auto;
 }
 
 ul {
