--- a/estilo.css
+++ b/estilo.css
@@ -3,20 +3,13 @@ body {
 
 }
 
-.contents{
-    width: 100%;
-    height: 800px;
-    margin: auto;
-}
 
-.posts{
+/*.posts{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background: rgb(211, 211, 208);
-    width: 100%;
-    height: 600px;
     margin: auto;
     margin-top: 100px;
 }
@@ -25,7 +18,7 @@ ul {
     
     list-style-type: none;
     padding: 0px;
-    width: 30%;
+    width: 40%;
 
 }
 
@@ -40,7 +33,7 @@ li {
 
 .palabras
 {
-    padding: 10px;
+    padding: 8px;
     font-size: 13px;
 }
 
@@ -59,4 +52,4 @@ li {
 .photo-footer p{
     text-align: justify;
     font-size: 16px;
-}
+}*/
