--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,16 @@ body {
 
 }
 
+.posts {
+    display: flex;
+	width: 100%;
+	height: 800px;
+	justify-content: center;
+	align-items: center;
+	background: rgb(211, 211, 208);
+
+}
+
 
 /*.posts{
     display: flex;
