--- a/estilo.css
+++ b/estilo.css
@@ -3,16 +3,11 @@ body {
 
 }
 
-html {
-    scroll-behavior: smooth;
-  }
-
 .contents{
     width: 100%;
-    height: 1100px;
+    height: 100%;
     margin: auto;
     overflow: hidden;
-    position: relative;
 
 }
 
@@ -23,8 +18,8 @@ html {
 	justify-content: center;
 	align-items: center;
 	background: rgb(211, 211, 208);
-    position: absolute;
-
+    padding: 20px;
+    
 }
 
 ul {
@@ -55,7 +50,21 @@ li {
 {
     padding-top: 10px;
     font-size: 13px;
+    margin-left: 64%;
+}
+
+.numeros-dos
+{
+    padding-top: 10px;
+    font-size: 13px;
     margin-left: 60%;
+}
+
+.numeros-tres
+{
+    padding-top: 10px;
+    font-size: 13px;
+    margin-left: 53%;
 }
 
 .photo-footer
